# boostpyodide

./: CMakeLists.txt  README.md  hello_ext.cpp  jest.config.js  pyproject.toml  setup_emsdk_env.sh
.github/workflows/: main.yml
tests/: test.js
